--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aircraft-landing-sort",
+  "name": "aircraft-landing-sorter",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -7,5 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "read-excel-file": "^2.0.6"
+  }
 }
